--- a/index.html
+++ b/index.html
@@ -187,6 +187,10 @@
 <!--            <p>Phone: +123 456 7890</p>-->
         </section>
     </div>
+    <footer>
+        <p>&copy; 2024 FunToPlay. All rights reserved.</p>
+        <p><a href="privacy.html">Privacy Policy</a></p>
+    </footer>
 <!--    <div class="gallery">-->
 <!--        <img src="/data/A_vibrant_and_engaging_mobile_game_scene_with_colo.png" alt="Game Scene 1">-->
 <!--        <img src="/data/A_vibrant_and_engaging_mobile_game_scene_with_colo.png" alt="Game Scene 2">-->
