add game and photos

--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
             <p>Welcome to FunToPlay, where we bring your mobile game ideas to life. Our team of expert developers and designers are dedicated to creating engaging and immersive mobile gaming experiences. Whether you're looking for game design, development, or marketing, we've got you covered.</p>
         </section>
         <section id="game" class="section">
-            <h2>Our Game: Base Stickman Attack</h2>
-            <img src="/data/base_stickman_attack.jpg" alt="Hamster Combat" class="game-image">
-            <p>Check out our latest game: <a href="https://play.google.com/store/apps/details?id=com.AmazingTeam.BaseStickmanAttack&hl=en">Base Stickman Attack</a>. Use your army to defeat the enemy forces and destroy the opponents base. Draw the line to spawn units.</p>
+            <h2>Our Game: Puzzle Run</h2>
+            <img src="/data/puzzle_run.png" alt="Puzzle Run" class="game-image">
+            <p>Check out our latest game: <a href="https://play.google.com/store/apps/details?id=com.AmazingTeam.PuzzleRun">Puzzle Run</a>. Draw the way from start to the finish block. The block on the platform can be 2 types: bad and good. You need to reach the finish block avoiding falling down because of bad blocks.</p>
     <div class="gallery-container">
         <div class="gallery">
             <img src="/data/scr1.png" alt="Game Scene 1">
