add game and photos

--- a/index.html
+++ b/index.html
@@ -167,16 +167,14 @@
         </section>
         <section id="game" class="section">
             <h2>Our Game: Puzzle Run</h2>
-            <img src="/data/puzzle_run.png" alt="Puzzle Run" class="game-image">
-            <p>Check out our latest game: <a href="https://play.google.com/store/apps/details?id=com.AmazingTeam.PuzzleRun">Puzzle Run</a>. Draw the way from start to the finish block. The block on the platform can be 2 types: bad and good. You need to reach the finish block avoiding falling down because of bad blocks.</p>
+            <img src="/data/dino_evo.png" alt="Puzzle Run" class="game-image">
+            <p>Check out our latest game: <a href="https://play.google.com/store/apps/details?id=com.onemoreplay.dino.evo">Dino Evo</a>. Dino Evo is an engaging and dynamic mobile game where players navigate a path filled with challenges and opportunities to evolve their dinosaur eggs. The primary objective is to collect dinosaur eggs, avoid obstacles, and guide the eggs to the end of each level to hatch into different dinosaurs.</p>
     <div class="gallery-container">
         <div class="gallery">
-            <img src="/data/scr1.png" alt="Game Scene 1">
-            <img src="/data/scr2.png" alt="Game Scene 2">
-            <img src="/data/scr3.png" alt="Game Scene 3">
-            <img src="/data/scr4.png" alt="Game Scene 4">
-            <img src="/data/scr5.png" alt="Game Scene 5">
-            <img src="/data/scr6.png" alt="Game Scene 6">
+            <img src="/data/scr1.jpeg" alt="Game Scene 1">
+            <img src="/data/scr2.jpeg" alt="Game Scene 2">
+            <img src="/data/scr3.jpeg" alt="Game Scene 3">
+            <img src="/data/scr4.jpeg" alt="Game Scene 4">
         </div>
     </div>
         </section>
